# pypdf

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile.python2  Dockerfile.python3  FAQ.html  FAQ_maker.py  LICENSE  MANIFEST  MANIFEST.in  Makefile  NBA_finals  README  README.md  __init__.py  _reader.py  _version.py  _writer.py  codeship-steps.yml  constants.py  docker-compose.yml  filters.py  generic.py  index.html  make_changelog.py  make_release.py  merger.py  mutmut-test.sh  mutmut_config.py  (+15 more)
.cursor/: Dockerfile  environment.json  hooks.json  mcp.json
.cursor/agents/: devops-guardian.md  newbie-onboarding.md  pm-planning.md  qa-reviewer.md
.cursor/commands/: nb-init.md  nb-onboard.md  nb-renewal-report.md  nb-verify-imports.md
.cursor/hooks/: _project_root.py  ensure_workspace.py  log_nb_event.py  nudge_nb_generate.py  run.sh  session_health.py
.cursor/rules/: code-conventions.mdc  customer-workspace.mdc  guardrails.mdc  kya.mdc  newbie-guided.mdc  routing.mdc
.githooks/: pre-push
.github/: SECURITY.md  dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/scripts/: check_gh_pages_updates.py  check_pr_title.py  check_urls.py
.github/workflows/: benchmark.yaml  ci.yml  create-github-release.yaml  experiment.yaml  gh-pages-check.yaml  github-ci.yaml  metrics-report-pr.yml  metrics-report.yml  pr-kya.yml  publish-to-pypi.yaml  reindex.yml  release.yaml  title-check.yaml  title-check.yml  unit-tests.yaml  urls-check.yaml  zizmor.yml
PDF_Samples/: README.md  README.txt
PyPDF2/: __init__.py  _adglyphs.py  _adobe_glyphs.py  _aes.py  _cmap.py  _encryption.py  _merger.py  _page.py  _protocols.py  _reader.py  _security.py  _utils.py  _version.py  _writer.py  constants.py  context.py  encryption.py  errors.py  filters.py  generic.py  glyphNamesToUnicode.py  merger.py  offset_updater.py  pagerange.py  papersizes.py  pdf.py  pdf_attributes.py  perms.py  toUnicode.py  types.py  utils.py  xmp.py
PyPDF2/_codecs/: adobe_glyphs.py
PyPDF2/codecs/: __init__.py  adobe_glyphs.py
PyPDF2/generic/: __init__.py  _annotations.py  _base.py  _data_structures.py  _fit.py  _rectangle.py  _utils.py
PyPDF3/: __init__.py  generic.py  merger.py  pagerange.py  pdf.py  utils.py  xmp.py
PyPDF4/: __init__.py  filters.py  generic.py  merger.py  pagerange.py  pdf.py  utils.py  xmp.py
Resources/: cmap.txt  crazyones.txt
Sample_Code/: 2-up.py  README.md  README.txt  basic_features.py  basic_merging.py  fillable_fields.py  fillable_form.odt  hierarchical_toc.md  make_simple.py  make_simple.sh  makepages.py  makesimple.py  makesimple.sh  pdfcat
Sample_Code/label-merge-hotfix/: merge.py
Scripts/: 2-up.py  analyze_pdf.py  booklet.py  example.txt  pdf-cat-even.py  pdf-image-extractor.py  pdfcat  pdfcat.py
Tests/: bench.py  test_basic_features.py  test_constants.py  test_encryption.py  test_filters.py  test_generic.py  test_javascript.py  test_merger.py  test_page.py  test_pagerange.py  test_papersizes.py  test_pdf.py  test_reader.py  test_utils.py  test_workflows.py  test_writer.py  test_writer_ref_sweep.py  test_xmp.py  tests.py  utils.py
cgi-bin/: test.py
config/: libraries.yaml  libraries.yaml.example  metrics.yaml.example  workspace.yaml.example
config/conventions/: _template.md  pypdf.md
dev/bench/: data.js  index.html  ng.html
docs/: .readthedocs.yaml  conf.py  index.rst  outlines.rst
docs/_static/: releasing.drawio
examples/: README.md  basic_features.py  basic_merging.py  ex-PdfWriterIncremental.py  makesimple.py  pdfcat
pypdf/: __init__.py  __main__.py  _cmap.py  _doc_common.py  _encryption.py  _font.py  _image_xobject.py  _merger.py  _page.py  _page_labels.py  _protocols.py  _reader.py  _security.py  _text_extractor.py  _utils.py  _version.py  _writer.py  _writerincremental.py  _xobj_image_helpers.py  _xobj_to_image.py  annotations.py  codecs.py  constants.py  errors.py  filters.py  generic.py  lzw.py  merge_pdfs.py  merger.py  pagerange.py  papersizes.py  pdf.py  types.py  utils.py  xmp.py
pypdf4/: __init__.py  filters.py  generic.py  merger.py  pagerange.py  pdf.py  utils.py  xmp.py
requirements/: ci-3.11.txt  ci.in  ci.txt  dev.in  dev.txt  docs.in  docs.txt
resources/: 010-pdflatex-forms.txt  AEO.1172.layout.rot180.txt  AEO.1172.layout.txt  Claim Maker Alerts Guide_pg2.layout.txt  Epic.Page.layout.txt  afm_to_dataclass.py  crazyones.txt  crazyones_layout_vertical_space.txt  crazyones_layout_vertical_space_font_height_weight.txt  create_brotli_test_pdf.py  garbled-font.layout.txt  get_core_fontmetrics.py  jpeg.txt  multicolumn-lorem-ipsum.txt  toy.layout.txt
samplecode/: MergingComments.py  PDFComments2XL.py  README.md  basic_features.py  basic_merging.py  makesimple.py  makesimple.sh
scripts/: 2-up.py  add_library.py  check_manifests.py  chunk_ast.py  cloud_bootstrap.sh  codecs.py  common.py  crawl.py  doctor.py  export_symbols.py  index.py  init_customer.py  install_git_hooks.py  library_search.py  mcp_launcher.py  mcp_symbols_server.py  pdf-image-extractor.py  pdfcat  pr_kya_comment.py  query.py  reindex_all.py  report_metrics.py  sync_metrics.py  verify_symbols.py
test/: index.html
tests/: __init__.py  bench.py  conftest.py  example_files.csv  example_files.yaml  test_00veryfirsttests.py  test_actions.py  test_annotations.py  test_appearance_stream.py  test_basic_features.py  test_cli.py  test_cmap.py  test_codecs.py  test_constants.py  test_context.py  test_doc_common.py  test_embedded_files.py  test_encryption.py  test_filters.py  test_font.py  test_forms.py  test_generic.py  test_helper_functions.py  test_image_xobject.py  test_images.py  test_javascript.py  test_lzw.py  test_merge_pdfs.py  test_merger.py  test_offset_updater.py  test_page.py  test_page_labels.py  test_pagerange.py  test_papersizes.py  test_pdf.py  test_pdfa.py  test_protocols.py  test_reader.py  test_security.py  test_text_extraction.py  (+7 more)
(+185 files in other folders)
