[metadata]
name = PyPDF2

author = Mathieu Fenniak
author_email = biziqe@mathieu.fenniak.net
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

description = A pure-python PDF library capable of splitting, merging, cropping, and transforming PDF files
long_description = file: README.md
long_description_content_type = text/markdown

license = BSD-3-Clause

url = https://pypdf2.readthedocs.io/en/latest/
project_urls =
    Source = https://github.com/py-pdf/PyPDF2
    Bug Reports = https://github.com/py-pdf/PyPDF2/issues
    Changelog = https://raw.githubusercontent.com/py-pdf/PyPDF2/main/CHANGELOG
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = PyPDF2
python_requires = >=2.7
