[metadata]
name = pypdf

author = Mathieu Fenniak
author_email = biziqe@mathieu.fenniak.net
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

description = A pure-python PDF library capable of splitting, merging, cropping, and transforming PDF files
long_description = file: README.md
long_description_content_type = text/markdown

license = BSD-3-Clause

url = https://pypdf.readthedocs.io/en/latest/
project_urls =
    Source = https://github.com/py-pdf/pypdf
    Bug Reports = https://github.com/py-pdf/pypdf/issues
    Changelog = https://pypdf.readthedocs.io/en/latest/meta/CHANGELOG.html
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
packages =
    pypdf
    pypdf._codecs
    pypdf.generic
python_requires = >=3.6
install_requires =
    typing_extensions >= 3.10.0.0; python_version < '3.10'
    dataclasses; python_version < '3.7'

[options.extras_require]
full = PyCryptodome; Pillow
crypto = PyCryptodome
image = Pillow

[mutmut]
backup = False
runner = ./mutmut-test.sh
tests_dir = tests/

[tool:check-wheel-contents]
package = ./pypdf

[darglint]
enable=DAR201
ignore=DAR002
